CCSA-19 Fixed style on small mobile screens

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -157,6 +157,8 @@ body {
   font-family: "DINNextLTPro-Medium";
   font-size: 14px;
   opacity: 0.8;
+  position: absolute;
+  bottom: 4px;
   text-align: center;
   color: #ffffff;
 }
@@ -323,8 +325,8 @@ body {
 }
 
 .dolby-container-logo img {
-  width: 120px;
-  height: 140px;
+  width: 110px;
+  height: 120px;
 }
 
 .dolby-container-wrapper {
@@ -528,7 +530,7 @@ input[type="checkbox"]:checked + label:before {
     font-size: 14px;
     padding-top: 2px;
     padding-left: 30px;
-    margin-bottom: 12px;
+    margin-bottom: 20px;
     margin-left: 20px;
   }
 
